--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,16 @@ streamlit
 requests
 beautifulsoup4
 pandas
-regex
-smtplib
-uuid
 plotly
 langchain
 langchain-community
 langchain-core
 langchain-groq
-langchain-huggingface
+langchain-text-splitters
+langchain_huggingface
 faiss-cpu
 pymupdf
 pypdf
+sentence-transformers
 python-dotenv
 tiktoken
