--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-streamlit
-requests
-beautifulsoup4
-pandas
-plotly
-langchain
-langchain-community
-langchain-core
-langchain-groq
-langchain-text-splitters
-langchain-huggingface
-faiss-cpu
-pymupdf
-pypdf
-sentence-transformers
-python-dotenv
-tiktoken
-lxml
+streamlit>=1.28.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+pandas>=2.0.0
+plotly>=5.17.0
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-core>=0.1.0
+langchain-groq>=0.1.0
+langchain-text-splitters>=0.0.1
+langchain-huggingface>=0.0.2
+faiss-cpu>=1.7.0
+pymupdf>=1.23.0
+pypdf>=3.0.0
+sentence-transformers>=2.2.0
+python-dotenv>=1.0.0
+tiktoken>=0.5.0
+lxml>=4.9.0
+email-validator>=1.3.0
